[package]
name = "gateway-tunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway-tunnel"
path = "src/main.rs"

[dependencies]
libc = "0.2"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
