[package]
name = "gateway-tunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway-tunnel"
path = "src/main.rs"

[dependencies]
libc = "0.2"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
webpki-roots = "0.26"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
